# ChangeLog for app-misc/gramps
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/gramps/ChangeLog,v 1.154 2012/09/30 01:25:12 blueness Exp $

  30 Sep 2012; Anthony G. Basile <blueness@gentoo.org> gramps-3.4.0.ebuild:
  stable ppc, bug #435486

  23 Sep 2012; Agostino Sarubbo <ago@gentoo.org> gramps-3.4.0.ebuild:
  Stable for amd64, wrt bug #435486

  29 Jul 2012; Raúl Porcel <armin76@gentoo.org> gramps-3.2.5.ebuild,
  gramps-3.2.6.ebuild, gramps-3.3.1.ebuild, gramps-3.4.0.ebuild:
  Drop sparc keywords

*gramps-3.4.0 (30 Jun 2012)

  30 Jun 2012; Christian Faulhammer <fauli@gentoo.org> +gramps-3.4.0.ebuild,
  +files/gramps-3.4.0-use_bsddb3.patch:
  version bump for bug 423315, with help from Yaron Tausky

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> gramps-3.2.5.ebuild,
  gramps-3.2.6.ebuild, gramps-3.3.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*gramps-3.3.1 (23 Oct 2011)

  23 Oct 2011; Christian Faulhammer <fauli@gentoo.org> -gramps-3.3.0.ebuild,
  +gramps-3.3.1.ebuild:
  version bump

  23 Oct 2011; Christian Faulhammer <fauli@gentoo.org> gramps-3.2.5.ebuild,
  gramps-3.2.6.ebuild, gramps-3.3.0.ebuild:
  use /usr/bin/python2 as default engine, so a switch to Python as main engine
  will not show any problems, see bug 383981 by christianasseburg AT yahoo DOT
  co DOT uk

  03 Jul 2011; Christian Faulhammer <fauli@gentoo.org> gramps-3.2.5.ebuild,
  gramps-3.2.6.ebuild, gramps-3.3.0.ebuild, metadata.xml:
  Drop support for mozembed for package removal, see bug 372253

*gramps-3.3.0 (13 Jun 2011)

  13 Jun 2011; Christian Faulhammer <fauli@gentoo.org> +gramps-3.3.0.ebuild,
  +files/gramps-3.3.0-use_bsddb3.patch:
  version bump, with valuable input from jmbsvicetto in bug 371324

*gramps-3.2.6 (06 May 2011)

  06 May 2011; Christian Faulhammer <fauli@gentoo.org> +gramps-3.2.6.ebuild:
  version bump

  16 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>