@@ -8,16 +8,18 @@ DIST gramps-3.2.5.tar.gz 7300072 SHA256 6cb97629913cb48e7804d35099813b86727c15b8
 DIST gramps-3.2.6.tar.gz 7340674 SHA256 66db9727e6aa7d65d6b4f798348c7b41b60f0eb4e06a8b8ae5b1f04cc6bdb0ec SHA512 b8240039e535585f2e0801375853bfa7207f3b3b6c22ca362d91b3ab25eb4ff2db23a886bdb92367396b45400d2c56e4b4929fe421e9113486fcf9095546b0ef WHIRLPOOL dbf725fd999efa9e0015ab4e8330e9cebf3c27bb2ae14d425f935ebf1bc4e0211cb751e165be5783afafccce1cad6b0852dc18b537b906b1ec902dfe0ecb2b03
 DIST gramps-3.3.1.tar.gz 8793331 SHA256 b186e539e571eebcd077b9684b9e8f8e30e77e1d63ad5b58d18b4b0d6c772375 SHA512 95c19ad449635360421db72dd144eafeb6e0bd830dca36526f5467e938cbb814ff65b5f5552a41217be4eec50d8974c4e6dccbe734957d8b32884c1bb18203e1 WHIRLPOOL 4b3e1319863b21881f21086e4dd6476545d9686db0348fa2dcb4235419db22ad7e81bb1f540ab57e77e0fc0c5490a9053fff8d2d00025ebc95c93eed3c01d9e8
 DIST gramps-3.4.0.tar.gz 9470815 SHA256 4d029c4f3d3ffd369cbf3859f86f3602ce97a038ed6238b9811d0bf3cd15acf0 SHA512 469fbbcb1e864f0c5a771f83e4592ff27f86b017fd9fe9d6d56fff04aa888bfd08d1a6d2bfcccb244328b3a78c7b22e031452d9eb409b674cf0369e0af8aed0f WHIRLPOOL f068bb558cd5a6c5b4bf03dfb0d7a389aa8ea3175d2240d3a9d612a684a1cfbdf781b98d8ba859bfeaf5843ea744b721673b8115495777401bbc165922bebf08
+DIST gramps-3.4.1.tar.gz 10024633 SHA256 dc0cabfbe5586d5f38af6364a7adfdb52a543614583f60a5ecbdb317d0bac8c7 SHA512 550b104458eacdeb765bf856808474d73b18903cdc56b91c7a5cb0ee28a3fef6ae48979daa6ec36a693b396697a415838dda7aa5314800c4118865205883fca5 WHIRLPOOL 3f7d40962a8b339d2af59767e692ae2d7c831e489675dac3d46c2ee53a3c0a4a340a346a9e317718bf85eb43fff0a3d6461656c00218ea978176d6813ba0f0bb
 EBUILD gramps-3.2.5.ebuild 2154 SHA256 31a99ac0654931f3eb595e2e5c623c6cb0f99cfdf84829b56cd104747e33863c SHA512 d93465256009b3d93e061f9eb688b14411e0f87441a4bed8b75946606e8cfb2020a35d13cb214cbd051542bb74a9b24c8ace37482b219a07c154569fe35286ba WHIRLPOOL 0339b83f573000690c6ef3e232d6692b47be624a2afd62fefb8dd685ce88101932b5be907e22743a3796190a36daac9730bdc17a1449403e5626167f0d218883
 EBUILD gramps-3.2.6.ebuild 2156 SHA256 6a5e8650260de7d5f436f79087b44863794e8c99dd7cf3c76719702f4b905ffb SHA512 ad2f2289ea4ef416175cc9147e7d0a5d4bddc48bb5a31c6de522d1250f85050629b165bcc6fc442e4dabecf129af528bd1e641781ba4844b3e551595d9314939 WHIRLPOOL 962b3c9887daf5716ce92921a17136c5da8e1cc1857e497907dc2aa618b0a3282c5712dc874b339c9688544d0d09a97db7a006f2d2ec72d065bf8e1f03d33791
 EBUILD gramps-3.3.1.ebuild 2156 SHA256 6173b9d4ca5668e0274f76071b101689207f78c7ec808fef42be3856298d1972 SHA512 0a16173d656a79ba136570de2d443ac0894ac9c16717ffc851aef1521552c900d736ae623c47d20322f88965a9008d9ef7ef61333442e76989625f99516b214e WHIRLPOOL 0c0c46dcc3cc4d08eff38259e1b9af79b079866d8859bcf02391f6fbd0569418fa30333c7710f812cb18b38cb9609bff51ccecd6c1ed62fe0bd5ea4c8ee72eff
 EBUILD gramps-3.4.0.ebuild 2271 SHA256 4f83738a430b0dbe3a9a8f592a43da7ee1657312910d17d7456e65b65d816de3 SHA512 0c0d63c51c3b4c086333f3183501204ae69fa137e6b72e82d55a06968dc242399b1242fb5f263ce132dee6d5a3bb134c6fa69e47a37ee1c6c4eae99064ebf9b9 WHIRLPOOL df72bd944b87ddc4da6251e3b71814e3119861baacead48d36ae5adbae8d62c4781bee3db16bfddcb6028fe067b145e7bef625b03a72ea114e986ed72a704836
-MISC ChangeLog 22225 SHA256 1994b9994bca0bfb6158278c9cc3eb9f498065e51005df9012b8f4660185f55b SHA512 dfd4b21554b49aef366430e018a959b2b0614b360ba3a8b7f3534bf5798bc6aca380883bb1316299b79d68e83fef6cffa785981817e210b3b52a14bc912914f6 WHIRLPOOL 553e7d5f55e46b21fd2da846f7e883c6d3cf5236ed67a11967bfbed14ced5f4b6d1236a6f5f7812321520bf824bc5053bcd32c85200b982a4c0dc32ba25db098
+EBUILD gramps-3.4.1.ebuild 2222 SHA256 8c873edac5fcac4007ac32d0f04ec1dea42f8b3fe46f06953ff355aadf2289fd SHA512 785e117a2a246ae587aad0d46d5215499a7667c5578a54b9ceadb0df0a26901e5574945d89e3b320ea95297c8fe8c672d5cdd369719bc4209b8d5c790581ceb0 WHIRLPOOL b83441d718f1d9c133133c78018aa0882c9e87d520ec449194b2fc55bf7819332be4f06f7de12859790409f62de839c4cb99ac99f153cd2bdd9f02cd5d0b1c69
+MISC ChangeLog 22344 SHA256 b23cb912d194eaf3df203dd9162148b6bbd6712919577e143ae0d4ea00f494df SHA512 431867cefa08315a3a9ff1cf176e0da042c5aba28b92b7234cffe49582a534554ddeca2a7c67c0776392fd079279f32b694092a218bc4372153b2866148134f8 WHIRLPOOL cbbcad0613245c50caa7f1b4e05ba5772a014ca88377ba5590edadcd7dc7838ca02874cf4fc0c75f0052a9a2628ec2c663807c8ba4f6d03c6288bc54d738f10a
 MISC metadata.xml 5281 SHA256 143b1e1e732fd624452538670c2fb390a6d2512c97959009b2bd593ccdef0963 SHA512 a5ea300d649875df57ab2b3b1be3e0c4eeb8aefb8dc33916d6864d434155c5263b5f31f57d3cef61911a87ae9f88c84dbac78bdbd49c7733616c83937882d3a8 WHIRLPOOL 043e2c1e39addc710619d4b726e7ab13946a956edd1ddeba1acc3ce23e35d0439da55927ccc2bb4cdeacbcf65c664ca59fed82c8fd873fb2ebdb8952018fa9e2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlBnn1IACgkQl5yvQNBFVTXhQwCggJhXnxJvT1ucgrR2gw4c/Lpv
-DJMAnjHkd1SurXCtSeYcb7agxUEArelW
-=f0sH
+iEYEAREIAAYFAlBsGnQACgkQNQqtfCuFnePJ5ACdFwcO7ew2ZtghJpHDWgOTJFVD
+v0MAnihLNlrcYipOrafyw4K0psCxmmIe
+=jl9F
 -----END PGP SIGNATURE-----
