@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/gramps
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/gramps/ChangeLog,v 1.154 2012/09/30 01:25:12 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/gramps/ChangeLog,v 1.155 2012/10/03 10:55:29 fauli Exp $
+
+*gramps-3.4.1 (03 Oct 2012)
+
+  03 Oct 2012; Christian Faulhammer <fauli@gentoo.org> +gramps-3.4.1.ebuild:
+  version bump
 
   30 Sep 2012; Anthony G. Basile <blueness@gentoo.org> gramps-3.4.0.ebuild:
   stable ppc, bug #435486
